# toy

./: .clang-format  .gitignore  .project_env  CMakeLists.txt  LICENSE  Makefile  README.md  ast.c  ast.h  ast_tables.c  ast_tables.h  context.c  context.h  dink.c  dump_symbols.c  errors.c  errors.h  expressions.c  expressions.h  fileio.h  func_reference.c  hash.c  hash.h  main.c  non-terminal-list.txt  notes.md  parser.c  parser.h  parser.y  pointer_list.c  pointer_list.h  scanner.c  scanner.flex  scanner.h  scanner.l  string_buffer.c  string_buffer.h  sym_reference.c  sym_reference.h  symbol.c  (+10 more)
docs/: README.md  Toi_language.odt  notes.md
old/: ast.c  parser.original.y  parser.y  symtab.c  symtab.h
old/testing/: Makefile  errors.c  errors.h  fileio.c  fileio.h  main.c  memory.h  parser.y  scanner.l  t  test.toy  tokens.c  tokens.h
scripts/: build  rebuild  setup
src/: CMakeLists.txt  Makefile  ast.c  ast.h  ast_tables.c  context.c  dink.c  dump_symbols.c  dump_symbols.h  emit_code.c  errors.c  errors.h  expressions.c  fileio.c  fileio.h  filestack.cpp  filestack.h  func_reference.c  func_reference.h  logger.h  main.c  main.cpp  outfile.c  parser.c  parser.cpp.old  parser.h  parser.y  runtime.c  runtime.h  scanner.cpp  scanner.flex  scanner.h  scanner.l  string_buffer.c  string_buffer.h  string_list.c  string_list.h  sym_reference.c  symbol.c  symbol.h  (+12 more)
src/common/: CMakeLists.txt  cmdline.c  cmdline.h  common_errors.h  common_hash.c  common_hash.h  common_memory.c  common_memory.h  common_pointer_list.c  common_pointer_list.h  common_string_buffer.c  common_string_buffer.h  common_string_list.c  common_string_list.h  errors.h  fileio.c  fileio.h  hash.c  hash.h  memory.c  memory.h  pointer_list.c  string_buffer.c  string_buffer.h  trace.c  trace.h
src/compiler/: CMakeLists.txt  CompilerBuildOpts.txt  ast.c  ast.h  ast_tables.c  ast_tables.h  context.c  context.h  dump_symbols.c  emit_code.c  emit_code.h  file_io.h  fileio.c  main.c  memory.c  parser.y  scanner.l  string_list.c  symbol.c  symbol.h  symbol_table.c  syntax_errors.c  syntax_errors.h  tokens.c  tokens.h  trace.h  type_table.c  type_table.h  value.c  value.h
src/compiler/ast/: CMakeLists.txt  assignment.c  ast.c  ast.h  ast_protos.h  bool_literal.c  compound_name.c  compound_reference.c  compound_reference_element.c  data_declaration.c  data_definition.c  dict_init.c  do_clause.c  dss_initializer.c  dss_initializer_item.c  else_clause.c  exit_statement.c  expression.c  expression_list.c  final_else_clause.c  for_clause.c  formatted_string.c  function_body.c  function_body_element.c  function_body_list.c  function_body_prelist.c  function_definition.c  function_name.c  function_parameters.c  function_reference.c  if_clause.c  import_statement.c  initializer.c  list_init.c  list_reference.c  literal_type_name.c  loop_body.c  loop_body_element.c  loop_body_list.c  loop_body_prelist.c  (+9 more)
src/compiler/main/: CMakeLists.txt  main.c
src/compiler/main/old/: file_io.c  parser.h  scanner.l  tokens.c  tokens.h
src/compiler/parser/: CMakeLists.txt  assignment.c  bool_literal.c  compound_name.c  compound_reference.c  compound_reference_element.c  data_declaration.c  data_definition.c  dict_init.c  do_clause.c  dss_initializer.c  dss_initializer_item.c  else_clause.c  exit_statement.c  expression.c  expression_list.c  final_else_clause.c  for_clause.c  formatted_string.c  function_body.c  function_body_element.c  function_body_list.c  function_body_prelist.c  function_definition.c  function_name.c  function_parameters.c  function_reference.c  if_clause.c  import_statement.c  initializer.c  list_init.c  list_reference.c  literal_type_name.c  loop_body.c  loop_body_element.c  loop_body_list.c  loop_body_prelist.c  parser.c  parser.h  parser_protos.h  (+9 more)
src/compiler/scanner/: CMakeLists.txt  file_io.c  file_io.h  scanner.l  tokens.c  tokens.h
src/gc/: CMakeLists.txt
src/runtime/: CMakeLists.txt  memory.c  rt_bool_obj.c  rt_bool_obj.h  rt_errors.c  rt_errors.h  rt_float_obj.c  rt_float_obj.h  rt_func_obj.c  rt_func_obj.h  rt_int_obj.c  rt_int_obj.h  rt_memory.c  rt_memory.h  rt_object.c  rt_object.h  rt_str_obj.c  rt_str_obj.h  rt_strings.c  rt_strings.h  rt_user_obj.c  rt_user_obj.h  runtime.c  runtime.h  runtime_memory.h  runtime_object.h  runtime_strings.h  string_buffer.h  strings.c  values.c
tests/: array.toy  assignment.toy  exprs.toy  fibofact.toy  generic.toy  grammar.c  grammar.h  grammar.output  grammar.peg  grammar.y.bkup  math.toy  non-terminal_list.txt  primes.toy  simple_test.toy  something.toy  stdio.toy  symbols.toy  terminal_list.txt  test1.txt  while.toy
tests/generate/: generate.py  grammar.txt  grammar.y  non-terminals.txt  tokens.txt
tests/generate/ast/: assignment.c  ast.c  ast.h  compound_name.c  compound_reference.c  compound_reference_element.c  data_declaration.c  data_definition.c  do_clause.c  dss_initializer.c  dss_initializer_item.c  else_clause.c  else_clause_follow.c  else_clause_list.c  exit_statement.c  expression.c  expression_list.c  final_else_clause.c  for_clause.c  formatted_string.c  function_body.c  function_body_element.c  function_body_list.c  function_body_prelist.c  function_definition.c  function_name.c  function_parameter_list.c  function_parameters.c  function_reference.c  if_clause.c  import_statement.c  initializer.c  list_initializer.c  list_reference.c  loop_body.c  loop_body_element.c  loop_body_list.c  loop_body_prelist.c  primary_expression.c  return_statement.c  (+7 more)
tests/generate/parser/: assignment.c  compound_name.c  compound_reference.c  compound_reference_element.c  data_declaration.c  data_definition.c  do_clause.c  dss_initializer.c  dss_initializer_item.c  else_clause.c  else_clause_follow.c  else_clause_list.c  exit_statement.c  expression.c  expression_list.c  final_else_clause.c  for_clause.c  formatted_string.c  function_body.c  function_body_element.c  function_body_list.c  function_body_prelist.c  function_definition.c  function_name.c  function_parameter_list.c  function_parameters.c  function_reference.c  if_clause.c  import_statement.c  parser.c  (+18 more)
(+3 files in other folders)
